--- a/src/wiwi/prelude.rs.html
+++ b/src/wiwi/prelude.rs.html
@@ -84,6 +84,7 @@
 <a href="#84" id="84">84</a>
 <a href="#85" id="85">85</a>
 <a href="#86" id="86">86</a>
+<a href="#87" id="87">87</a>
 </pre></div><pre class="rust"><code><span class="doccomment">//! Prelude module, exporting types from enabled features
 </span><span class="attr">#![cfg_attr(all(
 	not(feature = <span class="string">"auth-unstable"</span>),
@@ -98,6 +99,7 @@
 	not(feature = <span class="string">"iter-unstable"</span>),
 	not(feature = <span class="string">"lazy-wrap"</span>),
 	not(feature = <span class="string">"lsl-unstable"</span>),
+	not(feature = <span class="string">"memory-usage-unstable"</span>),
 	not(feature = <span class="string">"path-unstable"</span>),
 	not(feature = <span class="string">"serialiser-unstable"</span>),
 	not(feature = <span class="string">"string-pool-unstable"</span>),
