(automated) deploy from commit 6da9e65013349cc3055c2b5b1a33e87ff776ad4a

--- a/src/wiwi/prelude.rs.html
+++ b/src/wiwi/prelude.rs.html
@@ -85,6 +85,7 @@
 <a href="#85" id="85">85</a>
 <a href="#86" id="86">86</a>
 <a href="#87" id="87">87</a>
+<a href="#88" id="88">88</a>
 </pre></div><pre class="rust"><code><span class="doccomment">//! Prelude module, exporting types from enabled features
 </span><span class="attr">#![cfg_attr(all(
 	not(feature = <span class="string">"auth-unstable"</span>),
@@ -100,6 +101,7 @@
 	not(feature = <span class="string">"lazy-wrap"</span>),
 	not(feature = <span class="string">"lsl-unstable"</span>),
 	not(feature = <span class="string">"memory-usage-unstable"</span>),
+	not(feature = <span class="string">"minesweeper-unstable"</span>),
 	not(feature = <span class="string">"path-unstable"</span>),
 	not(feature = <span class="string">"serialiser-unstable"</span>),
 	not(feature = <span class="string">"string-pool-unstable"</span>),
