--- a/src/wiwi/lib.rs.html
+++ b/src/wiwi/lib.rs.html
@@ -195,6 +195,18 @@
 <a href="#195" id="195">195</a>
 <a href="#196" id="196">196</a>
 <a href="#197" id="197">197</a>
+<a href="#198" id="198">198</a>
+<a href="#199" id="199">199</a>
+<a href="#200" id="200">200</a>
+<a href="#201" id="201">201</a>
+<a href="#202" id="202">202</a>
+<a href="#203" id="203">203</a>
+<a href="#204" id="204">204</a>
+<a href="#205" id="205">205</a>
+<a href="#206" id="206">206</a>
+<a href="#207" id="207">207</a>
+<a href="#208" id="208">208</a>
+<a href="#209" id="209">209</a>
 </pre></div><pre class="rust"><code><span class="attr">#![cfg_attr(docsrs, feature(doc_cfg))]
 
 #![doc = <span class="macro">include_str!</span>(<span class="string">"../README.md"</span>)]
@@ -247,6 +259,18 @@
 #![cfg_attr(all(docsrs, not(kiwingay)), doc = <span class="string">"Unstable documentation for the in-development version of wiwi is available at [wiwi.kiwin.gay]."</span>)]
 #![cfg_attr(all(docsrs, not(kiwingay)), doc = <span class="string">""</span>)]
 #![cfg_attr(all(docsrs, not(kiwingay)), doc = <span class="string">"[wiwi.kiwin.gay]: https://wiwi.kiwin.gay"</span>)]
+
+#![cfg_attr(all(docsrs, kiwingay), doc = <span class="string">""</span>)]
+#![cfg_attr(
+	all(docsrs, kiwingay),
+	doc = <span class="macro">concat!</span>(
+		<span class="string">"The docs you are viewing currently have been built from commit ["</span>,
+		<span class="macro">env!</span>(<span class="string">"KIWINGAY_DEPLOY_COMMIT"</span>),
+		<span class="string">"](https://github.com/meadowsys/wiwi/commit/"</span>,
+		<span class="macro">env!</span>(<span class="string">"KIWINGAY_DEPLOY_COMMIT"</span>),
+		<span class="string">")."
+	</span>)
+)]
 
 </span><span class="comment">// ...yes, I'm doing it
 // (there's another one in prelude, copy/paste/modify for it)
