--- a/src/wiwi/with_cloned/mod.rs.html
+++ b/src/wiwi/with_cloned/mod.rs.html
@@ -168,6 +168,7 @@
 <a href="#168" id="168">168</a>
 <a href="#169" id="169">169</a>
 <a href="#170" id="170">170</a>
+<a href="#171" id="171">171</a>
 </pre></div><pre class="rust"><code><span class="doccomment">/// Executes code with cloned values, so the executed code
 /// can take ownership of the value without moving the original
 ///
@@ -314,6 +315,7 @@
 /// nothing for now.
 ///
 /// Random, but the below code snippets are equivalent:
+///
 /// ```
 /// # use wiwi::with_cloned::with_cloned;
 /// # let value = String::new();
