--- a/src/wiwi/with_cloned/mod.rs.html
+++ b/src/wiwi/with_cloned/mod.rs.html
@@ -217,6 +217,8 @@
 <a href="#217" id="217">217</a>
 <a href="#218" id="218">218</a>
 <a href="#219" id="219">219</a>
+<a href="#220" id="220">220</a>
+<a href="#221" id="221">221</a>
 </pre></div><pre class="rust"><code><span class="doccomment">/// Executes code with cloned values, so the executed code
 /// can take ownership of the value without moving the original
 ///
@@ -273,8 +275,9 @@
 </span><span class="doccomment">/// assert_eq!(*shared_data.lock().unwrap(), 420);
 /// ```
 ///
-/// ... this is not great, since you'd have to use `_shared_data` with an
-/// underscore to refer to the cloned value.
+/// ... this is not great, since you'd have to use `_shared_data`, which is
+/// different from the original one, and the underscore might look kind of ugly,
+/// and it's just not ideal.
 ///
 /// It can also be done with a temporary scope:
 ///
@@ -296,7 +299,8 @@
 /// ```
 ///
 /// ... not really what we would do (really only minor style preferences, nothing
-/// actually relating to function), but still not optimal either way.
+/// actually relating to function), but still has some boilerplate, and not the
+/// most optimal either way.
 ///
 /// In our short(...ish?) time writing rust code, I've already noticed I use this
 /// pattern a lot when dealing with shared state across threads. There are likely
