(automated) deploy from commit 42dfe6971c9a05e5778da41222430f5189ac1e31

--- a/src/wiwi/chainer/vec.rs.html
+++ b/src/wiwi/chainer/vec.rs.html
@@ -1644,11 +1644,11 @@
 		Vec::from_raw_parts(ptr, length, capacity).into()
 	}
 
-	<span class="doccomment">/// Creates a new vector, and preallocate some memory
+	<span class="doccomment">/// Creates a new vector chain, and preallocate some memory
 	///
 	/// The amount of memory allocated will be _at least_ enough to hold `capacity`
 	/// elements without reallocating. No allocation will happen if the provided
-	/// capacity is zero.
+	/// capacity is zero, or if `T` is a ZST.
 	///
 	/// There is NO GUARANTEE that this function will allocate an exact amount
 	/// of memory, so do not rely on this for soundness. If knowing the actual
