--- a/wiwi/chainer/struct.VecChain.html
+++ b/wiwi/chainer/struct.VecChain.html
@@ -11,10 +11,10 @@ allocation, or something else.</p>
     ptr: <a class="primitive" href="https://doc.rust-lang.org/nightly/std/primitive.pointer.html">*mut T</a>,
     length: <a class="primitive" href="https://doc.rust-lang.org/nightly/std/primitive.usize.html">usize</a>,
     capacity: <a class="primitive" href="https://doc.rust-lang.org/nightly/std/primitive.usize.html">usize</a>
-) -&gt; Self</h4></section><details class="toggle method-toggle" open><summary><section id="method.with_capacity" class="method"><a class="src rightside" href="../../src/wiwi/chainer/vec.rs.html#122-124">source</a><h4 class="code-header">pub fn <a href="#method.with_capacity" class="fn">with_capacity</a>(capacity: <a class="primitive" href="https://doc.rust-lang.org/nightly/std/primitive.usize.html">usize</a>) -&gt; Self</h4></section></summary><div class="docblock"><p>Creates a new vector, and preallocate some memory</p>
+) -&gt; Self</h4></section><details class="toggle method-toggle" open><summary><section id="method.with_capacity" class="method"><a class="src rightside" href="../../src/wiwi/chainer/vec.rs.html#122-124">source</a><h4 class="code-header">pub fn <a href="#method.with_capacity" class="fn">with_capacity</a>(capacity: <a class="primitive" href="https://doc.rust-lang.org/nightly/std/primitive.usize.html">usize</a>) -&gt; Self</h4></section></summary><div class="docblock"><p>Creates a new vector chain, and preallocate some memory</p>
 <p>The amount of memory allocated will be <em>at least</em> enough to hold <code>capacity</code>
 elements without reallocating. No allocation will happen if the provided
-capacity is zero.</p>
+capacity is zero, or if <code>T</code> is a ZST.</p>
 <p>There is NO GUARANTEE that this function will allocate an exact amount
 of memory, so do not rely on this for soundness. If knowing the actual
 allocated capacity is important, always do so using the
