(automated) deploy from commit 35825fc96790ab866655035ae2006719aa8e012a

--- a/src/wiwi/lib.rs.html
+++ b/src/wiwi/lib.rs.html
@@ -506,7 +506,7 @@
 )]
 
 #[cfg(target_pointer_width = <span class="string">"16"</span>)]
-</span><span class="macro">compile_error!</span>(<span class="string">"16-bit platforms are not supported (but please do file an issue if for whatever reason you do need it!)"</span>);
+</span><span class="macro">compile_error!</span>(<span class="string">"16-bit platforms are not supported (but please do file an issue if for whatever reason you do need it, I would be happy to add support!)"</span>);
 
 <span class="attr">#[cfg(any(doc, docsrs, kiwingay))]
 #[doc = <span class="macro">include_str!</span>(<span class="string">"../CHANGELOG.md"</span>)]
