--- a/src/wiwi/_internal/mod.rs.html
+++ b/src/wiwi/_internal/mod.rs.html
@@ -7,7 +7,11 @@
 <a href="#7" id="7">7</a>
 <a href="#8" id="8">8</a>
 <a href="#9" id="9">9</a>
-</pre></div><pre class="rust"><code><span class="comment">// TODO: expose this?
+<a href="#10" id="10">10</a>
+<a href="#11" id="11">11</a>
+</pre></div><pre class="rust"><code><span class="doccomment">//! Internal implementation details and stuff
+
+</span><span class="comment">// TODO: expose this?
 </span><span class="attr">#[cfg(any(
 	<span class="comment">// feature = "base16",
 	// feature = "base32",
