(automated) deploy from commit 27ddc2b9be11f24ef6d3c785271e3c02a88d8c77

--- a/wiwi/_changelog/index.html
+++ b/wiwi/_changelog/index.html
@@ -2,6 +2,7 @@
 <p>Hallo!</p>
 <h3 id="table-of-contents-"><a class="doc-anchor" href="#table-of-contents-">§</a>table of contents <!-- omit from toc --></h3>
 <ul>
+<li><a href="#unreleased">unreleased</a></li>
 <li><a href="#v0100">v0.10.0</a></li>
 <li><a href="#v090">v0.9.0</a></li>
 <li><a href="#v080">v0.8.0</a></li>
@@ -23,6 +24,10 @@
 <li><a href="#v010">v0.1.0</a></li>
 <li><a href="#v000">v0.0.0</a></li>
 <li><a href="#yanked-versions-and-reasons">Yanked versions and reasons</a></li>
+</ul>
+<h3 id="unreleased"><a class="doc-anchor" href="#unreleased">§</a>unreleased</h3>
+<ul>
+<li>added a decent chunk of documentation overall</li>
 </ul>
 <h3 id="v0100"><a class="doc-anchor" href="#v0100">§</a>v0.10.0</h3>
 <p>I need to stop making such large changes before releasing anything lol</p>
