--- a/src/wiwi/lib.rs.html
+++ b/src/wiwi/lib.rs.html
@@ -277,7 +277,10 @@
 <a href="#276" id="276">276</a>
 <a href="#277" id="277">277</a>
 <a href="#278" id="278">278</a>
-<a href="#279" id="279">279</a></pre></div><pre class="rust"><code><span class="attr">#![no_implicit_prelude]
+<a href="#279" id="279">279</a>
+<a href="#280" id="280">280</a>
+<a href="#281" id="281">281</a>
+<a href="#282" id="282">282</a></pre></div><pre class="rust"><code><span class="attr">#![no_implicit_prelude]
 
 </span><span class="comment">// TODO: review these
 // #![warn(
@@ -295,13 +298,16 @@
 	clippy::as_conversions,
 	clippy::empty_docs,
 	clippy::inline_always,
+	clippy::items_after_statements,
+	clippy::items_after_test_module,
 	clippy::missing_inline_in_public_items,
 	clippy::missing_safety_doc,
 	clippy::mixed_attributes_style,
 	clippy::multiple_unsafe_ops_per_block,
 	clippy::undocumented_unsafe_blocks,
-	clippy::unnecessary_safety_comment
-)]
+	clippy::unnecessary_safety_comment,
+	reason = <span class="string">"uwu"
+</span>)]
 
 #![cfg_attr(docsrs, feature(doc_cfg))]
 
