(automated) deploy from commit 0821935842cc118c10304a2786c1923eb2d57468

--- a/wiwi/_changelog/index.html
+++ b/wiwi/_changelog/index.html
@@ -6,6 +6,6 @@
 </ul>
 <h3 id="unreleased"><a class="doc-anchor" href="#unreleased">§</a>unreleased</h3>
 <ul>
-<li>added a decent chunk of documentation overall</li>
+<li>uwu</li>
 </ul>
 </div></details></section></div></main></body></html>
