--- a/src/wiwi/lib.rs.html
+++ b/src/wiwi/lib.rs.html
@@ -43,7 +43,17 @@
 <a href="#42" id="42">42</a>
 <a href="#43" id="43">43</a>
 <a href="#44" id="44">44</a>
-<a href="#45" id="45">45</a></pre></div><pre class="rust"><code><span class="attr">#![no_implicit_prelude]
+<a href="#45" id="45">45</a>
+<a href="#46" id="46">46</a>
+<a href="#47" id="47">47</a>
+<a href="#48" id="48">48</a>
+<a href="#49" id="49">49</a>
+<a href="#50" id="50">50</a>
+<a href="#51" id="51">51</a>
+<a href="#52" id="52">52</a>
+<a href="#53" id="53">53</a>
+<a href="#54" id="54">54</a>
+<a href="#55" id="55">55</a></pre></div><pre class="rust"><code><span class="attr">#![no_implicit_prelude]
 
 #![cfg_attr(docsrs, feature(doc_cfg))]
 
@@ -57,6 +67,16 @@
 		<span class="macro">env!</span>(<span class="string">"KIWINGAY_DEPLOY_COMMIT"</span>),
 		<span class="string">")."
 	</span>)
+)]
+
+#![cfg_attr(
+	feature = <span class="string">"nightly"</span>,
+	feature(
+		const_trait_impl,
+		integer_atomics,
+		f16,
+		f128
+	)
 )]
 
 #[cfg(target_pointer_width = <span class="string">"16"</span>)]
